--- a/.github/workflows/Build_Mksu_susfs.yml
+++ b/.github/workflows/Build_Mksu_susfs.yml
@@ -95,15 +95,15 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android13-5.15
-        git clone https://github.com/TanakaLun/kernel_patches4mksu.git
+        git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git --depth 1
         cd kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-        cp ../kernel_patches4mksu/mksu/mksu_susfs.patch ./KernelSU/
-        cp ../kernel_patches4mksu/mksu/fix.patch ./KernelSU/
-        cp ../kernel_patches4mksu/mksu/vfs_fix.patch ./KernelSU/
+        cp ../kernelsu_patch/mksu/mksu_susfs.patch ./KernelSU/
+        cp ../kernelsu_patch/mksu/fix.patch ./KernelSU/
+        cp ../kernelsu_patch/mksu/vfs_fix.patch ./KernelSU/
         # Apply patches
         cd ./KernelSU
         git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
@@ -113,7 +113,7 @@ jobs:
         patch -p1 --forward < vfs_fix.patch || true
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-        cp ../../kernel_patches4mksu/69_hide_stuff.patch ./
+        cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
         
     - name: Build kernel
