--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -36,6 +36,26 @@ on:
         description: "自定义内核版本号"
         required: false 
         default: ''
+      HIDE:
+        type: boolean
+        description: "是否启用隐藏补丁？"
+        required: true 
+        default: true 
+      VFS:
+        type: boolean
+        description: "是否启用手动钩子？"
+        required: true 
+        default: true 
+      KPM:
+        type: boolean
+        description: "是否启用KPM？"
+        required: true 
+        default: false 
+      ZRAM:
+        type: boolean
+        description: "是否启用添加更多的ZRAM算法？"
+        required: true 
+        default: false 
 
 env:
   CPU: sm8550
