--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -217,14 +217,14 @@ jobs:
         patch -p1 < 50_add_susfs_in_gki-${ANDROID_VERSION}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
     - name: Hide Stuff 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true'
+      if: github.event.inputs.HIDE == 'true'
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-
+        
     - name: New Hooks 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.KSU_VERSION != 'ksu' && github.event.inputs.KSU_VERSION != 'rksu'
+      if: github.event.inputs.VFS == 'true'
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../kernelsu_patch/hooks/new_hooks.patch ./
