--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -243,11 +243,11 @@ jobs:
         fi
         
         # 添加 VFS 配置设置
-        if [[ "${{ github.event.inputs.KSU_VERSION  }}" == 'ksu' || "${{ github.event.inputs.KSU_VERSION  }}" == 'rksu' ]]; then
-          echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig
-        else
+        if [[ "${{ github.event.inputs.VFS  }}" == 'true' ]]; then
           echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
+        else
+          echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig
         fi
         
         # 添加 OVERLAYFS 配置设置
