--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -223,12 +223,12 @@ jobs:
         cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
         
-    - name: New Hooks 补丁
+    - name: VFS 补丁
       if: github.event.inputs.VFS == 'true'
       run: |
         cd kernel_workspace/kernel_platform/common
-        cp ../../kernelsu_patch/hooks/new_hooks.patch ./
-        patch -p1 -F 3 < new_hooks.patch
+        cp ../../kernelsu_patch/hooks/syscall_hooks ./
+        patch -p1 -F 3 < syscall_hooks.patch
         
     - name: 添加 SUSFS 配置设置
       if: github.event.inputs.SUSFS_ENABLED == 'true'
