--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -50,7 +50,7 @@ on:
         type: boolean
         description: "是否启用KPM？"
         required: true 
-        default: false 
+        default: true 
       ZRAM:
         type: boolean
         description: "是否启用添加更多的ZRAM算法？"
@@ -217,18 +217,26 @@ jobs:
         patch -p1 < 50_add_susfs_in_gki-${ANDROID_VERSION}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
     - name: Hide Stuff 补丁
-      if: github.event.inputs.HIDE == 'true'
+      if: github.event.inputs.HIDE == 'true' && github.event.inputs.SUSFS_ENABLED == 'true'
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
         
     - name: VFS 补丁
-      if: github.event.inputs.VFS == 'true'
+      if: github.event.inputs.VFS == 'true' && github.event.inputs.SUSFS_ENABLED == 'true'
       run: |
-        cd kernel_workspace/kernel_platform/common
+        cd kernel_workspace/kernel_platform
+        echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
+        cd ./common
         cp ../../kernelsu_patch/hooks/syscall_hooks ./
         patch -p1 -F 3 < syscall_hooks.patch
+        
+    - name: KPM 补丁
+      if: github.event.inputs.KPM == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
+      run: |
+        cd kernel_workspace/kernel_platform
+        echo "CONFIG_KPM=y" >> ./common/arch/arm64/configs/gki_defconfig
         
     - name: 添加 SUSFS 配置设置
       if: github.event.inputs.SUSFS_ENABLED == 'true'
@@ -237,14 +245,8 @@ jobs:
         # 添加 KSU 配置设置
         echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
         
-        # 添加 KPM 配置设置
-        if [[ "${{ github.event.inputs.KSU_VERSION  }}" == 'sukisu' && "${{ github.event.inputs.KPM  }}" == 'true' ]]; then
-          echo "CONFIG_KPM=y" >> ./common/arch/arm64/configs/gki_defconfig
-        fi
-        
         # 添加 VFS 配置设置
         if [[ "${{ github.event.inputs.VFS  }}" == 'true' ]]; then
-          echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
         else
           echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig
@@ -284,7 +286,7 @@ jobs:
         LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki -j$(nproc --all)
         
     - name: kpm 补丁
-      if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
+      if: github.event.inputs.KPM == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
       run: |
         rm -rf kernel_workspace/kernel_platform/out/msm-kernel-${CPUD}-gki/dist
         if [ -d "kernel_workspace/kernelsu_patch" ]; then
