--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -251,11 +251,11 @@ jobs:
         # cp ../../kernelsu_patch/zram/zram_patch/lz4k_oplus.patch ./
         # patch -p1 -F 3 < lz4k_oplus.patch || true
         CONFIG_FILE=./arch/arm64/configs/gki_defconfig
-        # if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
-        #   sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
-        # else
-        #   echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
-        # fi
+        if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
+          sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
+        else
+          echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
+        fi
         if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
           sed -i 's/CONFIG_ZSMALLOC=m/CONFIG_ZSMALLOC=y/g' "$CONFIG_FILE"
         else
@@ -314,7 +314,7 @@ jobs:
       run: |
         cd kernel_workspace
         export BAZEL_BUILD_ARGS="--jobs=2 --local_ram_resources=6000 --local_cpu_resources=2"
-        LTO=thin SYSTEM_DLKM_RE_SIGN=0 BUILD_SYSTEM_DLKM=0 KMI_SYMBOL_LIST_STRICT_MODE=0 ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki -j$(nproc --all)
+        LTO=thin SYSTEM_DLKM_RE_SIGN=0 BUILD_SYSTEM_DLKM=0 KMI_SYMBOL_LIST_STRICT_MODE=0 ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki
         # LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki -j$(nproc --all)
         
     - name: kpm 补丁
