--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -261,13 +261,13 @@ jobs:
         else
           echo "CONFIG_ZSMALLOC=y" >> "$CONFIG_FILE"
         fi
-        rm "android/gki_aarch64_modules"
-        touch "android/gki_aarch64_modules"
-        echo "CONFIG_CRYPTO_LZ4HC=y" >> "$CONFIG_FILE"
+        # rm "android/gki_aarch64_modules"
+        # touch "android/gki_aarch64_modules"
+        # echo "CONFIG_CRYPTO_LZ4HC=y" >> "$CONFIG_FILE"
         echo "CONFIG_CRYPTO_LZ4K=y" >> "$CONFIG_FILE"
         echo "CONFIG_CRYPTO_LZ4KD=y" >> "$CONFIG_FILE"
-        echo "CONFIG_CRYPTO_842=y" >> "$CONFIG_FILE"
-        echo "CONFIG_ZRAM_WRITEBACK=y" >> "$CONFIG_FILE"
+        # echo "CONFIG_CRYPTO_842=y" >> "$CONFIG_FILE"
+        # echo "CONFIG_ZRAM_WRITEBACK=y" >> "$CONFIG_FILE"
         
     - name: 添加 SUSFS 配置设置
       if: github.event.inputs.SUSFS == 'true'
