--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -245,27 +245,34 @@ jobs:
         cp -r ../kernelsu_patch/zram/lz4k/lib/* ./common/lib
         cp -r ../kernelsu_patch/zram/lz4k/crypto/* ./common/crypto
         cp -r ../kernelsu_patch/zram/lz4k_oplus ./common/lib/
+        echo "CONFIG_ZSMALLOC=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_CRYPTO_LZ4HC=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_CRYPTO_LZ4K=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_CRYPTO_LZ4KD=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_CRYPTO_842=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_CRYPTO_LZ4K_OPLUS=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_ZRAM_WRITEBACK=y" >> ./common/arch/arm64/configs/gki_defconfig
         cd ./common
         cp ../../kernelsu_patch/zram/zram_patch/lz4kd.patch ./
         patch -p1 -F 3 < lz4kd.patch || true
         cp ../../kernelsu_patch/zram/zram_patch/lz4k_oplus.patch ./
         patch -p1 -F 3 < lz4k_oplus.patch || true
-        CONFIG_FILE=./arch/arm64/configs/gki_defconfig
-        if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
-          sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
-        else
-          echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
-        fi
-        if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
-          sed -i 's/CONFIG_ZSMALLOC=m/CONFIG_ZSMALLOC=y/g' "$CONFIG_FILE"
-        else
-          echo "CONFIG_ZSMALLOC=y" >> "$CONFIG_FILE"
-        fi
+        # CONFIG_FILE=./arch/arm64/configs/gki_defconfig
+        # if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
+        #   sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
+        # else
+        #   echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
+        # fi
+        # if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
+        #   sed -i 's/CONFIG_ZSMALLOC=m/CONFIG_ZSMALLOC=y/g' "$CONFIG_FILE"
+        # else
+        #   echo "CONFIG_ZSMALLOC=y" >> "$CONFIG_FILE"
+        # fi
         # rm "android/gki_aarch64_modules"
         # touch "android/gki_aarch64_modules"
         # echo "CONFIG_CRYPTO_LZ4HC=y" >> "$CONFIG_FILE"
-        echo "CONFIG_CRYPTO_LZ4K=y" >> "$CONFIG_FILE"
-        echo "CONFIG_CRYPTO_LZ4KD=y" >> "$CONFIG_FILE"
+        # echo "CONFIG_CRYPTO_LZ4K=y" >> "$CONFIG_FILE"
+        # echo "CONFIG_CRYPTO_LZ4KD=y" >> "$CONFIG_FILE"
         # echo "CONFIG_CRYPTO_842=y" >> "$CONFIG_FILE"
         # echo "CONFIG_ZRAM_WRITEBACK=y" >> "$CONFIG_FILE"
         
